--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+    <section class="image-section">
+      <div class="input-container">
+        <input
+          class="search-input"
+          type="text"
+          placeholder="Search images..."
+        />
+        <button class="search-button" type="button">Search</button>
+      </div>
+      <div class="gallery"></div>
     </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
